@@ -1,3 +1,6 @@
+2010-02-23  Paul C. Mantz <pcmantz@zmanda.com>
+	* perl/Amanda/Report/human.pm: fixed hostname truncation
+
 2010-02-19  Dustin J. Mitchell <dustin@zmanda.com>
 	* installcheck/Amanda_Recovery_Clerk.pl: use an unbuffered write to
 	  make fake holding files; don't try to load a dumpcache unless both
